Fix z-index in nav

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -9,4 +9,5 @@
     justify-content: space-between;
     align-items: center;
     padding: 16px;
+    z-index: 1;
 }
